k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: "://amazonaws.com"
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"      # The minimum CPU it needs to start
            memory: "64Mi"   # The minimum RAM it needs to start
          limits:
            cpu: "200m"      # The maximum CPU it can ever use
            memory: "128Mi"  # The maximum RAM it can ever use

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: "://amazonaws.com"
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"      # The minimum CPU it needs to start
            memory: "64Mi"   # The minimum RAM it needs to start
          limits:
            cpu: "200m"      # The maximum CPU it can ever use
            memory: "128Mi"  # The maximum RAM it can ever use

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer # This triggers AWS to create a public Load Balancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
