k8s/mysql.yaml
# 1. MySQL Service (Internal Entry Point)
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: lab-shopflow # MUST MATCH THE SECRET NAMESPACE
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
---
# 2. MySQL Deployment (The Database Engine)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: lab-shopflow # MUST MATCH THE SECRET NAMESPACE
spec:
  replicas: 1 # Databases should typically have 1 replica unless using a cluster
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        # RESOURCE LIMITS: Prevents "Noisy Neighbor" issues in EKS
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

    # STORAGE: Connects to AWS EFS         
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: efs-claim
